# visual-paprika

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh
VisualPaprika/: main.cpp  utils.cpp  utils.hpp
